Revision history for {{$dist->name}}

{{$NEXT}}

0.54      2021-03-19 06:13:48 -0600
  - Delay loading AnyEvent::Connector until needed.
  - Moved git repository to new github org.

0.53      2019-04-01 08:42:05 -0400
  - Add missing timeout from test that could otherwise hang with a
    broken combination of Debian Buster / Net::SSLeay / AnyEvent.
    (gh#46. gh#47)

0.52      2019-02-08 14:22:11 -0500
  - Production version functionally identical to the 0.51_01 release.

0.51_01   2019-02-05 23:22:05 -0500
  - You may now overide the host and port when using the
    AnyEvent::WebSocket::Client's connect method.

0.50      2019-01-14 10:49:47 -0500
  - Fixed a testing bug that was reportd on Debian Buster.

0.49      2018-07-09 21:06:24 -0400
  - Fixed a bug where adding next_message callback within a next_message
    callback was called immediately with the same message (gh#39 xavery++)

0.48      2018-05-21 21:08:49 -0400
  - Production version functionally identical to the 0.47_01 release.

0.47_01   2018-05-20 09:35:23 -0400
  - Add max_fragments attribute ot AnyEvent::WebSocket::Client
  - Add max_fragments attribute ot AnyEvent::WebSocket::Connection

0.46      2018-04-07 16:39:29 -0400
  - Production version functionally identical to the 0.45_01 release.

0.45_01   2018-04-04 17:01:03 -0400
  - add env_proxy property to AnyEvent::WebSocket::Client (gh#36 gh#37 TOSHIOITO++)

0.44      2017-12-12 15:37:51 -0500
  - Compatibility with 0.22.

0.43      2017-10-19 17:06:51 -0400
  - Production version functionally identical to the 0.42_01 release.

0.42_01   2017-10-18 11:45:16 -0400
  - You can now unregister event callbacks.
  - The 'on' method for AnyEvent::WebSocket::Connection now returns a
    code ref that can be used to unregister the callback.
  - The 'each_message' event also gets a code ref that can be used to
    unregister the callback.

  [WARNING: change in behavior]
  - The 'on' method for AnyEvent::WebSocket::Connection used to return