@@ -13,7 +13,6 @@ github_user   = uperl
 workflow      = linux
 workflow      = windows
 workflow      = macos
-workflow      = cygwin
 workflow      = msys2-mingw
 
 [RemovePrereqs]
